--- a/index.html
+++ b/index.html
@@ -1,62 +1,61 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-  </head>
-  <body>
-    <div class="container">
-      <div class="card">
-        <h2 class="CardHeader"></h2>
-        <img src="" alt="" class="Cardimage" />
-        <h3></h3>
-      </div>
-      <div class="card">
-        <h2 class="CardHeader"></h2>
-        <img src="" alt="" class="Cardimage" />
-        <h3></h3>
-      </div>
-      <div class="card">
-        <h2 class="CardHeader"></h2>
-        <img src="" alt="" class="Cardimage" />
-        <h3></h3>
-      </div>
-      <div class="card">
-        <h2 class="CardHeader"></h2>
-        <img src="" alt="" class="Cardimage" />
-        <h3></h3>
-      </div>
-      <div class="card">
-        <h2 class="CardHeader"></h2>
-        <img src="" alt="" class="Cardimage" />
-        <h3></h3>
-      </div>
-      <div class="card">
-        <h2 class="CardHeader"></h2>
-        <img src="" alt="" class="Cardimage" />
-        <h3></h3>
-      </div>
-      <div class="card">
-        <h2 class="CardHeader"></h2>
-        <img src="" alt="" class="Cardimage" />
-        <h3></h3>
-      </div>
-      <div class="card">
-        <h2 class="CardHeader"></h2>
-        <img src="" alt="" class="Cardimage" />
-        <h3></h3>
-      </div>
-      <div class="card">
-        <h2 class="CardHeader"></h2>
-        <img src="" alt="" class="Cardimage" />
-        <h3></h3>
-      </div>
-      <div class="card">
-        <h2 class="CardHeader"></h2>
-        <img src="" alt="" class="Cardimage" />
-        <h3></h3>
-      </div>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Document</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+
+<body>
+  <div class="container">
+    <div class="card">
+      <h2 class="CardHeader"></h2>
+      <img src="" alt="" class="Cardimage" />
+      <h3 class="Cardtext"></h3>
     </div>
-  </body>
+    <div class="card">
+      <h2 class="CardHeader"></h2>
+      <img src="" alt="" class="Cardimage" />
+      <h3 class="Cardtext"></h3>
+    </div>
+    <div class="card">
+      <h2 class="CardHeader"></h2>
+      <img src="" alt="" class="Cardimage" />
+      <h3 class="Cardtext"></h3>
+    </div>
+    <div class="card">
+      <h2 class="CardHeader"></h2>
+      <img src="" alt="" class="Cardimage" />
+      <h3 class="Cardtext"></h3>
+    </div>
+    <div class="card">
+      <h2 class="CardHeader"></h2>
+      <img src="" alt="" class="Cardimage" />
+      <h3 class="Cardtext"></h3>
+    </div>
+    <div class="card">
+      <h2 class="CardHeader"></h2>
+      <img src="" alt="" class="Cardimage" />
+      <h3 class="Cardtext"></h3>
+    </div>
+    <div class="card">
+      <h2 class="CardHeader"></h2>
+      <img src="" alt="" class="Cardimage" />
+      <h3 class="Cardtext"></h3>
+    </div>
+    <div class="card">
+      <h2 class="CardHeader"></h2>
+      <img src="" alt="" class="Cardimage" />
+      <h3 class="Cardtext"></h3>
+    </div>
+    <div class="card">
+      <h2 class="CardHeader"></h2>
+      <img src="" alt="" class="Cardimage" />
+      <h3 class="Cardtext"></h3>
+    </div>
+  </div>
+</body>
+
 </html>
