--- a/index.html
+++ b/index.html
@@ -1,61 +1,60 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+    <link rel="stylesheet" href="style.css" />
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Document</title>
-  <link rel="stylesheet" href="style.css">
-</head>
-
-<body>
-  <div class="container">
-    <div class="card">
-      <h2 class="CardHeader"></h2>
-      <img src="" alt="" class="Cardimage" />
-      <h3 class="Cardtext"></h3>
+  <body>
+    <h1 class="Title">Food Cards</h1>
+    <div class="container">
+      <div class="card">
+        <h2 class="CardHeader">Steak</h2>
+        <img src="steakimage.png" alt="steak" class="Cardimage" />
+        <h3 class="Cardtext"></h3>
+      </div>
+      <div class="card">
+        <h2 class="CardHeader">Eggs</h2>
+        <img src="eggsimage.png" alt="eggs" class="Cardimage" />
+        <h3 class="Cardtext"></h3>
+      </div>
+      <div class="card">
+        <h2 class="CardHeader">Avocado</h2>
+        <img src="avocadoimage.png" alt="avocado" class="Cardimage" />
+        <h3 class="Cardtext"></h3>
+      </div>
+      <div class="card">
+        <h2 class="CardHeader">Mushroom</h2>
+        <img src="mushroomimage.png" alt="mushroom" class="Cardimage" />
+        <h3 class="Cardtext"></h3>
+      </div>
+      <div class="card">
+        <h2 class="CardHeader">Soup</h2>
+        <img src="soupimage.png" alt="soup" class="Cardimage" />
+        <h3 class="Cardtext"></h3>
+      </div>
+      <div class="card">
+        <h2 class="CardHeader">Noodles</h2>
+        <img src="noodlesimage.png" alt="noodles" class="Cardimage" />
+        <h3 class="Cardtext"></h3>
+      </div>
+      <div class="card">
+        <h2 class="CardHeader">Apple</h2>
+        <img src="appleimage.png" alt="apple" class="Cardimage" />
+        <h3 class="Cardtext"></h3>
+      </div>
+      <div class="card">
+        <h2 class="CardHeader">Grapefruit</h2>
+        <img src="grapefruitimage.png" alt="grapefruit" class="Cardimage" />
+        <h3 class="Cardtext"></h3>
+      </div>
+      <div class="card">
+        <h2 class="CardHeader">Pineapple</h2>
+        <img src="pineappleimage.png" alt="pineapple" class="Cardimage" />
+        <h3 class="Cardtext"></h3>
+      </div>
     </div>
-    <div class="card">
-      <h2 class="CardHeader"></h2>
-      <img src="" alt="" class="Cardimage" />
-      <h3 class="Cardtext"></h3>
-    </div>
-    <div class="card">
-      <h2 class="CardHeader"></h2>
-      <img src="" alt="" class="Cardimage" />
-      <h3 class="Cardtext"></h3>
-    </div>
-    <div class="card">
-      <h2 class="CardHeader"></h2>
-      <img src="" alt="" class="Cardimage" />
-      <h3 class="Cardtext"></h3>
-    </div>
-    <div class="card">
-      <h2 class="CardHeader"></h2>
-      <img src="" alt="" class="Cardimage" />
-      <h3 class="Cardtext"></h3>
-    </div>
-    <div class="card">
-      <h2 class="CardHeader"></h2>
-      <img src="" alt="" class="Cardimage" />
-      <h3 class="Cardtext"></h3>
-    </div>
-    <div class="card">
-      <h2 class="CardHeader"></h2>
-      <img src="" alt="" class="Cardimage" />
-      <h3 class="Cardtext"></h3>
-    </div>
-    <div class="card">
-      <h2 class="CardHeader"></h2>
-      <img src="" alt="" class="Cardimage" />
-      <h3 class="Cardtext"></h3>
-    </div>
-    <div class="card">
-      <h2 class="CardHeader"></h2>
-      <img src="" alt="" class="Cardimage" />
-      <h3 class="Cardtext"></h3>
-    </div>
-  </div>
-</body>
-
+  </body>
 </html>
