--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+    />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
@@ -12,47 +16,47 @@
     <div class="container">
       <div class="card">
         <h2 class="CardHeader">Steak</h2>
-        <img src="steakimage.png" alt="steak" class="Cardimage" />
+        <img src="steakimage.png" alt="steak" class="steak" />
         <h3 class="Cardtext"></h3>
       </div>
       <div class="card">
         <h2 class="CardHeader">Eggs</h2>
-        <img src="eggsimage.png" alt="eggs" class="Cardimage" />
+        <img src="eggsimage.png" alt="eggs" class="eggs" />
         <h3 class="Cardtext"></h3>
       </div>
       <div class="card">
         <h2 class="CardHeader">Avocado</h2>
-        <img src="avocadoimage.png" alt="avocado" class="Cardimage" />
+        <img src="avocadoimage.png" alt="avocado" class="avocado" />
         <h3 class="Cardtext"></h3>
       </div>
       <div class="card">
         <h2 class="CardHeader">Mushroom</h2>
-        <img src="mushroomimage.png" alt="mushroom" class="Cardimage" />
+        <img src="mushroomimage.png" alt="mushroom" class="mushroom" />
         <h3 class="Cardtext"></h3>
       </div>
       <div class="card">
         <h2 class="CardHeader">Soup</h2>
-        <img src="soupimage.png" alt="soup" class="Cardimage" />
+        <img src="soupimage.png" alt="soup" class="soup" />
         <h3 class="Cardtext"></h3>
       </div>
       <div class="card">
         <h2 class="CardHeader">Noodles</h2>
-        <img src="noodlesimage.png" alt="noodles" class="Cardimage" />
+        <img src="noodlesimage.png" alt="noodles" class="noodles" />
         <h3 class="Cardtext"></h3>
       </div>
       <div class="card">
         <h2 class="CardHeader">Apple</h2>
-        <img src="appleimage.png" alt="apple" class="Cardimage" />
+        <img src="appleimage.png" alt="apple" class="apple" />
         <h3 class="Cardtext"></h3>
       </div>
       <div class="card">
         <h2 class="CardHeader">Grapefruit</h2>
-        <img src="grapefruitimage.png" alt="grapefruit" class="Cardimage" />
+        <img src="grapefruitimage.png" alt="grapefruit" class="gradefruit" />
         <h3 class="Cardtext"></h3>
       </div>
       <div class="card">
         <h2 class="CardHeader">Pineapple</h2>
-        <img src="pineappleimage.png" alt="pineapple" class="Cardimage" />
+        <img src="pineappleimage.png" alt="pineapple" class="pineapple" />
         <h3 class="Cardtext"></h3>
       </div>
     </div>
