--- a/index.html
+++ b/index.html
@@ -59,6 +59,22 @@
         <img src="pineappleimage.png" alt="pineapple" class="pineapple" />
         <h3 class="Cardtext"></h3>
       </div>
+      <div class="card">
+        <h2 class="CardHeader">Pineapple</h2>
+        <img src="pineappleimage.png" alt="pineapple" class="pineapple" />
+        <h3 class="Cardtext"></h3>
+      </div>
+      <div class="card">
+        <h2 class="CardHeader">Pineapple</h2>
+        <img src="pineappleimage.png" alt="pineapple" class="pineapple" />
+        <h3 class="Cardtext"></h3>
+      </div>
+      <div class="card">
+        <h2 class="CardHeader">Pineapple</h2>
+        <img src="pineappleimage.png" alt="pineapple" class="pineapple" />
+        <h3 class="Cardtext"></h3>
+      </div>
+      </div>
     </div>
   </body>
 </html>
